--- a/introducao.tex
+++ b/introducao.tex
@@ -1,6 +1,16 @@
 %---------- Primeiro Capitulo ----------
 \chapter{Introdução}
 
+1 Motivação - necessidade do problema a ser resolvido - custo, ambiental,
+2 Justificativa -se for diferente da motivacao
+3 Objetivos: geral + 3 especificos
+4 metodologia
+5 apresentacao do documento: no cap tal, etc - pode absorver a metodologia
+
+% motivação
+Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos \cite{USO-COMPONENTES-ELETRONICOS}, \cite{USO-COMPONENTES-ELETRONICOS-2} a inspeção do acabamento em objetos metálicos \cite{USO-INSPECAO-SUPERFICIES}, a produção de circuitos impressos \cite{USO-INSPECAO-PCB},  \cite{USO-INSPECAO-PCB-2}, entre outros.
+
+
 O problema do controle de navegação de robôs móveis autônomos apresenta um grande
 desafio, devido ao fato de o ambiente ser dinâmico (geralmente), haver sensoriamento
 sujeito a ruídos e exigências de controle e tomada de decisão em tempo
