--- a/reflatex.bib
+++ b/reflatex.bib
@@ -1,243 +1,335 @@
-% This file was created with JabRef 2.3.1.
+% This file was created with JabRef 2.9.2.
 % Encoding: Cp1252
 
-@article{FRACASSO,
-    author    = {FRACASSO, PAULO T. and COSTA, ANNA H.R.},
-    title     = {Navegação Reativa de Robôs Móveis Autônomos Utilizando Lógica Nebulosa com Regras Ponderadas},
-    journal   = {VII SBAI/ II IEEE LARS},
-    year      = {2005},
-    month    = {Setembro}
-}
-
-@thesis{FCMENDONCA,
-    author    = {MENDONÇA, M.},
-    title     = {Uma Contribuição ao Desenvolvimento de Sistemas Inteligentes Utilizando Redes Cognitivas Dinâmicas},
-    school    = {Universidade Tecnológica Federal do Paraná},
-    type     = {Doutorado},
-    year      = {2011}
-}
-
-@article{MENDONCA,
-    author    = {MENDONÇA, M. and ARRUDA, L.V.R. and NEVES, F.},
-    title     = {Autonomous Navigation System Using Event Driven-Fuzzy Cognitive Maps},
-    journal   = {© Springer Science+Business Media},
-    year      = {2011},
-    month    = {Outubro}
-}
-
-@ARTICLE{MAMDAMI,
-    author  =   {E. H. Mamdani and S. Assilian},
-    title   =   {An Experiment in Linguistic Synthesis with a Fuzzy Logic Controller},
-    journal =   {Int. J. Hum.-Comput. Stud.},
-    publisher = {Elsevier},
-    volume  =   {51},
-    number  =   {2},
-    year    =   {1999},
-    pages   =   {135-147}
-}
-
-@article{GROUMPOS,
-  author    = {Chrysostomos D. Stylios and
-               Peter P. Groumpos},
-  title     = {Fuzzy Cognitive Maps in modeling supervisory control systems},
-  journal   = {Journal of Intelligent and Fuzzy Systems},
-  volume    = {8},
-  number    = {1},
-  year      = {2000},
-  pages     = {83-98},
-  ee        = {http://iospress.metapress.com/content/px4n2k9rtna68f9d/},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
-
-@article{KOSKO,
-    author    = {KOSKO, B.},
-    title     = {Fuzzy cognitive maps},
-    journal   = {International Journal Man-Machine Studie},
-    volume   = {24},
-    number   = {1},
-    pages    = {65-75},
-    year      = {1986}
-}
-
-@BOOKLET{BELLATOR,
-    title = {Desenvolvimento do Projeto Bellator},
-    year = {2010},
-    address = {Curitiba},
-    author = "Alexandre Jacques Marin and Bruno Weingraber and Lucas Campiolo Paiva and Yuri Antin Wergrzn"
-}
-
-@MISC{FUZZYLOGIC,
-    author = {WIKIPEDIA},
-    title = {Fuzzy Logic},
-    year = {2011},
-    timestamp = {2011.07.29},
-    url = {http://en.wikipedia.org/wiki/Fuzzy\_logic},
-    urlaccessdate = {29 de julho de 2011}
-}
-
-@MISC{FUZZYLOGICTUTORIAL,
-    author = {Kaehler},
-    title = {Fuzzy Logic Tutorial},
-    year = {1998},
-    timestamp = {1998.03.01},
-    url = {http://www.seattlerobotics.org/encoder/mar98/fuz/flindex.html},
-    urlaccessdate = {30 de julho de 2011}
-}
-
-@MISC{DATASHEETSENSOR,
-    author = {SHARPCORPORATION},
-    year={2006},
-    title = {GP2Y0A02F98YK Datasheet},
-    url = {http://www.mindsensors.com/index.php?module=documents\&JAS\_DocumentManager\_op= \\ downloadFile\&JAS\_File\_id=335},
-    urlaccessdate = {1 de Agosto de 2011}
-}
-
 @MISC{HEDS9700,
-    author = {AGILENTTECHNOLOGIES},
-    year = {2002},
-    title = {Small Optical Encoder Modules HEDS-9700 Series},
-    url = {http://www.digchip.com/datasheets/parts/datasheet/021/QEDS-9871-pdf.php},
-    urlaccessdate = {28 de Fevereiro de 2012}
-}
-
-@MISC{LM324,
-	author = {TEXASINSTRUMENTS},
-	title = {LM124,LM224,LM324,LM2902 Low Power Quad Operational Amplifiers},
-	url = {http://www.national.com/ds/LM/LM124.pdf},
-	urlaccessdate = {25 de fevereiro de 2012},
-}
-
-@MISC{74LS244,
-	author = {PHILIPS},
-	title = {74LS244 Octal buffer,line driver; 3-state},
-	url = {http://www.learn-c.com/74ls244.pdf},
-	urlaccessdate = {26 de Fevereiro de 2012},
-}
-
-@MISC{DATASHEETKIT,
-    author = {SILICONLABS},
-    year = {2006},
-    title = {C8051F340DK Datasheet},
-    url = {http://datasheet.octopart.com/C8051F340DK-Silicon-Laboratories-datasheet-9512.pdf},
-    urlaccessdate = {1 de Agosto de 2011}
-}
-
-@MISC{TS-7260,
-    author = {EMBEDDED ARM},
-    title = {TS-7260 Datasheet},
-    year = {2009},
-    timestamp = {2012.01.16},
-    url = {http://www.embeddedarm.com/documentation/ts-7260-datasheet.pdf},
-    urlaccessdate = {16 de Janeiro de 2012}
+  author = {AGILENTTECHNOLOGIES},
+  title = {Small Optical Encoder Modules HEDS-9700 Series},
+  year = {2002},
+  url = {http://www.digchip.com/datasheets/parts/datasheet/021/QEDS-9871-pdf.php},
+  urlaccessdate = {28 de Fevereiro de 2012}
 }
 
 @MISC{TSMANUAL,
-    author = {EMBEDDED ARM},
-    title = {TS-7260 Hardware Manual},
-    year = {2012},
-    timestamp = {2012.01.16},
-    url = {http://www.embeddedarm.com/documentation/ts-7260-manual.pdf},
-    urlaccessdate = {16 de Janeiro de 2012}
+  author = {EMBEDDED ARM},
+  title = {TS-7260 Hardware Manual},
+  year = {2012},
+  timestamp = {2012.01.16},
+  url = {http://www.embeddedarm.com/documentation/ts-7260-manual.pdf},
+  urlaccessdate = {16 de Janeiro de 2012}
 }
 
-@MISC{CC,
-	author = {TECHNOLOGICSYSTEMS},
-	title = {Linux for ARM on TS-7000 Embedded Computers},
-	year = {2012},
-	timestamp = {2012.02.27},
-	url = {http://www.embeddedarm.com/software/software-arm-linux.php},
-	urlaccessdate = {27 de Fevereiro de 2012}
-}
-
-@MISC{X80,
-    author = {DOCTORROBOT},
-    title = {X80 Robot},
-    year = {2012},
-    timestamp = {2012.02.06},
-    url = {http://www.drrobot.com/products\_item. \\ asp?itemNumber=x80},
-    urlaccessdate = {06 de Fevereiro de 2012}
-}
-
-@article{ZADEH,
-    author  =   {Lotfi A. Zadeh},
-    title   =   {Fuzzy Sets},
-    journal =   {Information and Control},
-    volume  =   {8},
-    number  =   {3},
-    year    =   {1965},
-    pages   =   {338-353}
-}
-
-@BOOK{PEDRYCZ,
-    author  =   {Witold Pedrycz and Fernando A. C. Gomide},
-    title   =   {Fuzzy Systems Engineering - Toward Human-Centric Computing},
-    publisher   =   {Wiley},
-    year    =   {2007},
-    isbn    =   {978-0-471-78857-7},
-    pages   =   {I-XXII, 1-526}
-}
-
-@mastersthesis{FABRO,
-    author    = {J. A. Fabro},
-    title     = {Grupos neurais e sistemas nebulosos: aplicação a navegação autonoma},
-    school    = {Universidade Estadual de Campinas. Faculdade de Engenharia Elétrica},
-    type     = {Mestrado},
-    year      = {1996},
-    month    = {Fevereiro}
-}
-
-@MISC{SRF06,
-    author = {DEVANTECHELETRONIC},
-    year = {2012},
-    title = {SRF06 Ultra-Sonic Ranger with 4-20mA Output},
-    url = {http://www.robot-electronics.co.uk/htm/srf06tech.htm},
-    urlaccessdate = {29 de Fevereiro de 2012}
-}
-
-@MISC{PWMREF,
-    author = {ELETRONICAORG},
-    year = {2012},
-    title = {Apostila Sobre Modulação PWM},
-    url = {http://www.eletronica.org/arq\_apostilas/apostila\_pwm.pdf},
-    urlaccessdate = {04 de Março de 2012}
+@MISC{TS-7260,
+  author = {EMBEDDED ARM},
+  title = {TS-7260 Datasheet},
+  year = {2009},
+  timestamp = {2012.01.16},
+  url = {http://www.embeddedarm.com/documentation/ts-7260-datasheet.pdf},
+  urlaccessdate = {16 de Janeiro de 2012}
 }
 
 @MISC{EAGLE,
-    author = {CADSOFT},
-    year = {2012},
-    title = {CadSoft EAGLE Freeware Version},
-    url = {http://www.cadsoftusa.com/downloads/freeware/?language=en},
-    urlaccessdate = {05 de Março de 2012}
+  author = {CADSOFT},
+  title = {CadSoft EAGLE Freeware Version},
+  year = {2012},
+  url = {http://www.cadsoftusa.com/downloads/freeware/?language=en},
+  urlaccessdate = {05 de Março de 2012}
+}
+
+@MISC{SRF06,
+  author = {DEVANTECHELETRONIC},
+  title = {SRF06 Ultra-Sonic Ranger with 4-20mA Output},
+  year = {2012},
+  url = {http://www.robot-electronics.co.uk/htm/srf06tech.htm},
+  urlaccessdate = {29 de Fevereiro de 2012}
+}
+
+@MISC{X80,
+  author = {DOCTORROBOT},
+  title = {X80 Robot},
+  year = {2012},
+  timestamp = {2012.02.06},
+  url = {http://www.drrobot.com/products\_item. \\ asp?itemNumber=x80},
+  urlaccessdate = {06 de Fevereiro de 2012}
+}
+
+@MISC{PWMREF,
+  author = {ELETRONICAORG},
+  title = {Apostila Sobre Modulação PWM},
+  year = {2012},
+  url = {http://www.eletronica.org/arq\_apostilas/apostila\_pwm.pdf},
+  urlaccessdate = {04 de Março de 2012}
+}
+
+@MASTERSTHESIS{FABRO,
+  author = {J. A. Fabro},
+  title = {Grupos neurais e sistemas nebulosos: aplicação a navegação autonoma},
+  school = {Universidade Estadual de Campinas. Faculdade de Engenharia Elétrica},
+  year = {1996},
+  type = {Mestrado},
+  month = {Fevereiro}
+}
+
+@ARTICLE{FRACASSO,
+  author = {FRACASSO, PAULO T. and COSTA, ANNA H.R.},
+  title = {Navegação Reativa de Robôs Móveis Autônomos Utilizando Lógica Nebulosa
+	com Regras Ponderadas},
+  journal = {VII SBAI/ II IEEE LARS},
+  year = {2005},
+  month = {Setembro}
 }
 
 @MISC{GIT,
-	author = {GIT},
-	year = {2012},
-	title = {Git - Fast Version Control System},
-	url = {http://git-scm.com/},
-	urlaccessdate = {06 de Março de 2012},
-}
-
-@MISC{GITHUB,
-	author = {GITHUB},
-	year = {2012},
-	title = {GitHub},
-	url = {https://github.com/},
-	urlaccessdate = {06 de Março de 2012},
+  author = {GIT},
+  title = {Git - Fast Version Control System},
+  year = {2012},
+  url = {http://git-scm.com/},
+  urlaccessdate = {06 de Março de 2012}
 }
 
 @MISC{GITHELP,
-	author = {GITHUB},
-	year = {2012},
-	title = {Help.GitHub},
-	url = {http://help.github.com/},
-	urlaccessdate = {06 de Março de 2012},
+  author = {GITHUB},
+  title = {Help.GitHub},
+  year = {2012},
+  url = {http://help.github.com/},
+  urlaccessdate = {06 de Março de 2012}
+}
+
+@MISC{GITHUB,
+  author = {GITHUB},
+  title = {GitHub},
+  year = {2012},
+  url = {https://github.com/},
+  urlaccessdate = {06 de Março de 2012}
+}
+
+@MISC{FUZZYLOGICTUTORIAL,
+  author = {Kaehler},
+  title = {Fuzzy Logic Tutorial},
+  year = {1998},
+  timestamp = {1998.03.01},
+  url = {http://www.seattlerobotics.org/encoder/mar98/fuz/flindex.html},
+  urlaccessdate = {30 de julho de 2011}
+}
+
+@ARTICLE{KOSKO,
+  author = {KOSKO, B.},
+  title = {Fuzzy cognitive maps},
+  journal = {International Journal Man-Machine Studie},
+  year = {1986},
+  volume = {24},
+  pages = {65-75},
+  number = {1}
+}
+
+@ARTICLE{USO-COMPONENTES-ELETRONICOS,
+  author = {Hong-Dar Lin},
+  title = {Tiny surface defect inspection of electronic passive components using
+	discrete cosine transform decomposition and cumulative sum techniques
+	},
+  journal = {Image and Vision Computing },
+  year = {2008},
+  volume = {26},
+  pages = {603 - 621},
+  number = {5},
+  doi = {http://dx.doi.org/10.1016/j.imavis.2007.07.009},
+  issn = {0262-8856},
+  keywords = {Tiny surface defect inspection},
+  owner = {telmo},
+  timestamp = {2013.11.15},
+  url = {http://www.sciencedirect.com/science/article/pii/S0262885607001151}
+}
+
+@ARTICLE{USO-COMPONENTES-ELETRONICOS-2,
+  author = {Hong-Dar Lin},
+  title = {Computer-aided visual inspection of surface defects in ceramic capacitor
+	chips },
+  journal = {Journal of Materials Processing Technology },
+  year = {2007},
+  volume = {189},
+  pages = {19 - 25},
+  doi = {http://dx.doi.org/10.1016/j.jmatprotec.2006.12.051},
+  issn = {0924-0136},
+  keywords = {Surface defect inspection},
+  owner = {telmo},
+  timestamp = {2013.11.15},
+  url = {http://www.sciencedirect.com/science/article/pii/S0924013607000052}
+}
+
+@ARTICLE{MAMDAMI,
+  author = {E. H. Mamdani and S. Assilian},
+  title = {An Experiment in Linguistic Synthesis with a Fuzzy Logic Controller},
+  journal = {Int. J. Hum.-Comput. Stud.},
+  year = {1999},
+  volume = {51},
+  pages = {135-147},
+  number = {2},
+  publisher = {Elsevier}
+}
+
+@ARTICLE{USO-INSPECAO-PCB,
+  author = {N.S.S. Mar and P.K.D.V. Yarlagadda and C. Fookes},
+  title = {Design and development of automatic visual inspection system for
+	\{PCB\} manufacturing },
+  journal = {Robotics and Computer-Integrated Manufacturing },
+  year = {2011},
+  volume = {27},
+  pages = {949 - 962},
+  number = {5},
+  __markedentry = {[telmo:]},
+  doi = {http://dx.doi.org/10.1016/j.rcim.2011.03.007},
+  issn = {0736-5845},
+  keywords = {Automatic \{PCB\} inspection},
+  owner = {telmo},
+  timestamp = {2013.11.15},
+  url = {http://www.sciencedirect.com/science/article/pii/S0736584511000457}
+}
+
+@BOOKLET{BELLATOR,
+  title = {Desenvolvimento do Projeto Bellator},
+  author = {Alexandre Jacques Marin and Bruno Weingraber and Lucas Campiolo Paiva
+	and Yuri Antin Wergrzn},
+  address = {Curitiba},
+  year = {2010}
+}
+
+@OTHER{FCMENDONCA,
+  author = {MENDONÇA, M.},
+  school = {Universidade Tecnológica Federal do Paraná},
+  title = {Uma Contribuição ao Desenvolvimento de Sistemas Inteligentes Utilizando
+	Redes Cognitivas Dinâmicas},
+  type = {Doutorado},
+  year = {2011}
+}
+
+@ARTICLE{MENDONCA,
+  author = {MENDONÇA, M. and ARRUDA, L.V.R. and NEVES, F.},
+  title = {Autonomous Navigation System Using Event Driven-Fuzzy Cognitive Maps},
+  journal = {© Springer Science+Business Media},
+  year = {2011},
+  month = {Outubro}
+}
+
+@BOOK{PEDRYCZ,
+  title = {Fuzzy Systems Engineering - Toward Human-Centric Computing},
+  publisher = {Wiley},
+  year = {2007},
+  author = {Witold Pedrycz and Fernando A. C. Gomide},
+  pages = {I-XXII, 1-526},
+  isbn = {978-0-471-78857-7}
+}
+
+@MISC{74LS244,
+  author = {PHILIPS},
+  title = {74LS244 Octal buffer,line driver; 3-state},
+  url = {http://www.learn-c.com/74ls244.pdf},
+  urlaccessdate = {26 de Fevereiro de 2012}
 }
 
 @MISC{LM317,
-	author = {NATIONAL SEMICONDUCTOR},
-	year = {2012},
-	title = {LM317 - 3-Terminal Adjustable Regulator},
-	url = {http://www.national.com/mpf/LM/LM317.html},
-	urlaccessdate = {21 de Março de 2012},
+  author = {NATIONAL SEMICONDUCTOR},
+  title = {LM317 - 3-Terminal Adjustable Regulator},
+  year = {2012},
+  url = {http://www.national.com/mpf/LM/LM317.html},
+  urlaccessdate = {21 de Março de 2012}
 }
+
+@MISC{DATASHEETSENSOR,
+  author = {SHARPCORPORATION},
+  title = {GP2Y0A02F98YK Datasheet},
+  year = {2006},
+  url = {http://www.mindsensors.com/index.php?module=documents\&JAS\_DocumentManager\_op= \\ downloadFile\&JAS\_File\_id=335},
+  urlaccessdate = {1 de Agosto de 2011}
+}
+
+@MISC{DATASHEETKIT,
+  author = {SILICONLABS},
+  title = {C8051F340DK Datasheet},
+  year = {2006},
+  url = {http://datasheet.octopart.com/C8051F340DK-Silicon-Laboratories-datasheet-9512.pdf},
+  urlaccessdate = {1 de Agosto de 2011}
+}
+
+@ARTICLE{GROUMPOS,
+  author = {Chrysostomos D. Stylios and Peter P. Groumpos},
+  title = {Fuzzy Cognitive Maps in modeling supervisory control systems},
+  journal = {Journal of Intelligent and Fuzzy Systems},
+  year = {2000},
+  volume = {8},
+  pages = {83-98},
+  number = {1},
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+  ee = {http://iospress.metapress.com/content/px4n2k9rtna68f9d/}
+}
+
+@MISC{CC,
+  author = {TECHNOLOGICSYSTEMS},
+  title = {Linux for ARM on TS-7000 Embedded Computers},
+  year = {2012},
+  timestamp = {2012.02.27},
+  url = {http://www.embeddedarm.com/software/software-arm-linux.php},
+  urlaccessdate = {27 de Fevereiro de 2012}
+}
+
+@MISC{LM324,
+  author = {TEXASINSTRUMENTS},
+  title = {LM124,LM224,LM324,LM2902 Low Power Quad Operational Amplifiers},
+  url = {http://www.national.com/ds/LM/LM124.pdf},
+  urlaccessdate = {25 de fevereiro de 2012}
+}
+
+@MISC{FUZZYLOGIC,
+  author = {WIKIPEDIA},
+  title = {Fuzzy Logic},
+  year = {2011},
+  timestamp = {2011.07.29},
+  url = {http://en.wikipedia.org/wiki/Fuzzy\_logic},
+  urlaccessdate = {29 de julho de 2011}
+}
+
+@ARTICLE{ZADEH,
+  author = {Lotfi A. Zadeh},
+  title = {Fuzzy Sets},
+  journal = {Information and Control},
+  year = {1965},
+  volume = {8},
+  pages = {338-353},
+  number = {3}
+}
+
+@ARTICLE{USO-INSPECAO-PCB-2,
+  author = {Zeng, Zhou and Ma, LiZhuang and Zheng, ZuoYong},
+  title = {Automated extraction of PCB components based on specularity using
+	layered illumination},
+  journal = {Journal of Intelligent Manufacturing},
+  year = {2011},
+  volume = {22},
+  pages = {919-932},
+  number = {6},
+  __markedentry = {[telmo:6]},
+  doi = {10.1007/s10845-009-0367-6},
+  issn = {0956-5515},
+  keywords = {Machine vision; Solder joints; Component extraction},
+  language = {English},
+  owner = {telmo},
+  publisher = {Springer US},
+  timestamp = {2013.11.15},
+  url = {http://dx.doi.org/10.1007/s10845-009-0367-6}
+}
+
+@ARTICLE{USO-INSPECAO-SUPERFICIES,
+  author = {H Zheng and L.X Kong and S Nahavandi},
+  title = {Automatic inspection of metallic surface defects using genetic algorithms
+	},
+  journal = {Journal of Materials Processing Technology },
+  year = {2002},
+  volume = {125-126},
+  pages = {427 - 433},
+  number = {0},
+  doi = {http://dx.doi.org/10.1016/S0924-0136(02)00294-7},
+  issn = {0924-0136},
+  keywords = {Automatic visual inspection},
+  owner = {telmo},
+  timestamp = {2013.11.15},
+  url = {http://www.sciencedirect.com/science/article/pii/S0924013602002947}
+}
+
