--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -1,20 +1,52 @@
 \chapter{Fundamentação Teórica}
 \label{chap:fundteor}
 
-Este capítulo apresentará a fundamentação teórica, que consiste na
-descrição do estado inicial robô Bellator, com uma visão geral do
-projeto no qual este robô estivera em uso, a descrição do material entregue à equipe, a especificação do robô após a reconstrução e adequação, a apresentação dos estudos de Lógica Fuzzy e ED-FCM (\emph{Event-Driven Fuzzy Cognitive Maps}).
+Este capítulo apresenta a fundamentação teórica, que consiste no estudo das técnicas e algoritmos utilizados. O capitulo divide-se em três seções. A seção \ref{sec:segmentacao} apresenta técnicas de subtração de fundo, limiarização, filtros morfológicos, esqueletonização e análise de componentes principais. A seção \ref{sec:descricao}  por sua vez apresenta propriedades de regiões em imagens e descritores de \emph{fourier}. Finalmente a seção \ref{sec:classificacao} apresenta uma visão geral de redes neurais e métodos de treinamento.
+
+\section{Segmentação} \label{sec:segmentacao}
+
+\subsection{Subtração de fundo}
+% subtração de fundo
+\subsection{Limiarização}
+% limiarização
+\subsection{Filtros morfológicos}
+% filtros morfológicos
+\subsection{Esqueletonização}
+% esqueletonização
+\subsection{Análise de componentes principais}
+% análise de componentes principais
+
+\section{Descrição} \label{sec:descricao}
+
+\subsection{Propriedades de regiões}
+% propriedades de regiões
+\subsection{Descritores de \emph{fourier}}
+% descritores de fourier
+
+\section{Classificação} \label{sec:classificacao}
+
+\subsection{Redes neurais}
+% redes neurais
+\subsection{Método de \emph{BR}}
+% trainbr
+\subsection{Método de \emph{LM}}
+% trainlm
+
+
+
+
+
+
+
 
 %---------- Estado inicial do Projeto ----------
 \section{Estado Inicial do Projeto} \label{sec:estpro}
 
-Esta seção visa descrever com quais recursos a equipe iniciou a execução do trabalho, ou seja, a situação do robô e seus componentes de \emph{hardware}, o principal e mais importante recurso desse projeto, os componentes de \emph{software} e a documentação de ambos, da forma como foram entregues à equipe.
 
 \subsection{Visão Geral}
 \label{sec:visgeral}
 
-O robô Bellator, disponibilizado à equipe para realização deste trabalho, já havia sido utilizado anteriormente em um projeto de Oficina de Integração 3, que visou a implementação da eletrônica embarcada que permitisse que a plataforma robótica pudesse ser controlada remotamente por \emph{joystick} \cite{BELLATOR}. O trabalho desempenhado na disciplina consistiu no projeto e implementação de uma plataforma robótica dividida em três camadas: baixo nível, alto nível e supervisória. A camada de baixo nível era responsável por controlar os motores do robô e receber as leituras dos sensores. A camada de alto nível tinha como responsabilidades comunicar-se com a camada de baixo nível via conexão serial, fazer obtenção de vídeo através de uma \emph{webcam} e comunicar-se com a camada supervisória através de uma conexão sem fio (para transmissão dos dados de vídeo captados pela \emph{webcam}). Finalmente, a camada supervisória era responsável por receber os dados de vídeo, mostrar na tela para o usuário, e permitir o controle do robô remotamente através de um \emph{joystick}. O diagrama esquemático da figura \ref{fig:diagsis} ilustra a configuração do projeto de oficinas, ponto de partida para a reconstrução do robô Bellator.
-
+\cite{BELLATOR}. O trabalho desda figura \ref{fig:diagsis} ilustra a configuração do projeto.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{./figs/diagsis.png}
@@ -24,20 +56,12 @@ O robô Bellator, disponibilizado à equipe para realização deste trabalho, já hav
 \end{figure}
 
 A partir da figura \ref{fig:diagsis}, o funcionamento do projeto
-Bellator pode ser explicado: a camada de baixo nível é composta pelo
-robô Bellator, equipado com dois motores elétricos Bosch FPG 12V,
-cinco sensores de distância ``2Y0A02F98"~ da Sharp, uma bateria
-Unybatt 12V-7,2 Ampère hora, duas pontes H LN298, dois \emph{encoders} ópticos
-HEDS-9700 e uma placa microcontrolada C8051F340, que é capaz de ler e
-converter leituras de tensão analógicas dos sensores bem como produzir sinais de controle para os motores do robô. Esta placa é conectada à camada de alto nível, composta por um PC Embarcado VIA EPIA ME6000 Mini-ITX com sistema operacional Linux, através de uma conexão serial. Utilizando-se de um protocolo de comunicação, esse PC embarcado envia comandos de movimentação para a camada de baixo nível (conexão serial) e recebe as leituras dos sensores obtidas pela camada de baixo nível. O PC embarcado também comunica-se com a camada supervisória para receber comandos de movimentação do usuário e enviar as leituras dos sensores para o mesmo (comunicação sem fio). Além disso, o PC embarcado envia à camada supervisória um fluxo(\emph{stream}) de vídeo gerado por uma \emph{webcam} Genius iLook 316. Finalmente, o \emph{software} supervisor remoto, o qual é executado em um PC com máquina virtual Java, fornece as informações recebidas da camada de alto nível para o usuário, permitindo-o tomar decisões sobre a locomoção do robô. O \emph{software} também recebe comandos de movimentação do usuário, gerados em um \emph{joystick} do videogame Sony Playstation 2, enviando-os para a camada de alto nível pela mesma conexão. Ao receber os comandos de movimentação, a camada de alto-nível repassa para a camada de baixo nível, responsável pela efetivação dos comandos, alterando os PWMs enviados aos motores de acordo com os comandos recebidos, controlando suas velocidades.
-
-Os componentes de \emph{hardware} do robô, o \emph{software} de controle
-supervisório e a camada de baixo nível, ou seja, o \emph{software} da placa C8051F340, utilizados no projeto de oficina estão documentados em detalhes em \cite{BELLATOR}. A seguir, será descrito como o robô foi recebido pela equipe e quais componentes foram aproveitados.
+Bella
 
 \subsection{Recebimento do Robô}
 \label{sec:recrobo}
 
-O robô Bellator foi entregue à equipe em Abril de 2011, em uma caixa, desmontado, juntamente com toda a documentação \cite{BELLATOR} disponível em mídia digital. A caixa continha os seguintes itens:
+jhgfvytf \cite{BELLATOR} disponível em mídia digital. A caixa continha os seguintes itens:
 
 \begin{itemize}
 \item Chassi do robô Bellator com dois motores Bosch FPG12V e pontes H acopladas;
@@ -49,28 +73,7 @@ O robô Bellator foi entregue à equipe em Abril de 2011, em uma caixa, desmontado
 \item Um PC Embarcado VIA EPIA ME60000 Mini-ITX.
 \end{itemize}
 
-O chassi do robô e os componentes acoplados foram a base da plataforma
-robótica utilizada pela equipe e foram essenciais para a execução
-desse trabalho. Os sensores de distância foram utilizados na
-localização de obstáculos, fornecendo dados de entrada aos
-algoritmos de navegação para tomada de decisão e determinação de
-ações de controle. Os \emph{encoders} foram utilizados para fornecer uma
-realimentação odométrica para ajustar a velocidade das rodas. A
-placa microcontrolada foi utilizada para realizar o controle de baixo
-nível do robô, que foram: acionamento dos motores, conversão
-analógica para digital das leituras dos sensores, contagem dos pulsos dos \emph{encoders} e comunicação serial com o \emph{hardware} acoplado. As baterias foram utilizadas para alimentar os sensores, \emph{encoders}, os motores e a placa microcontrolada.
-
-Alguns itens mencionados na seção \ref{sec:visgeral}, referentes ao
-projeto de oficinas, não foram recebidos ou não foram utilizados
-nesse trabalho. A \emph{webcam} e \emph{joystick}, por exemplo, não foram entregues
-pois não foram necessários. O \emph{joystick} não foi necessário porque
-esse trabalho se trata de um sistema de navegação autônomo, que
-descarta a necessidade de um controle remoto, e a \emph{webcam} não foi
-necessária porque esse trabalho não abordou a navegação através de
-imagem de vídeo. A placa de roteamento entregue foi utilizada nos
-testes dos componentes, visto que foi necessária para testar o
-funcionamento do robô. Essa placa foi reprojetada e reconstruída. O
-PC embarcado foi entregue destituído de qualquer documentação e, além disso, como o novo objetivo do robô não implicou a necessidade de comunicação sem fio ou implementação de stream de vídeo, motivo principal para a utilização desse PC no projeto Bellator~\cite{BELLATOR}, a equipe optou por descartar esse recurso e utilizar outra placa, descrita em detalhes na seção \ref{sec:espts7260}. O processo de reconstrução e adaptação da plataforma robótica é descrito em detalhes no capítulo \ref{chap:desenv}.
+O m fio ou implementação de stream de vídeo, motivo principal para a utilização desse PC no projeto Bellator~\cite{BELLATOR}, a equipe optou por descartar esse recurso e utilizar outra placa, descrita em detalhes na seção \ref{sec:espts7260}. O processo de reconstrução e adaptação da plataforma robótica é descrito em detalhes no capítulo \ref{chap:desenv}.
 
 \subsection{Considerações}
 A possibilidade de reconstruir e adequar o robô Bellator e o
