--- a/inicio.tex
+++ b/inicio.tex
@@ -15,8 +15,8 @@
 %\autorquatro{Nome do Quarto Autor} % quarto autor do trabalho, caso exista
 \cita{FRIESEN, Telmo} % sobrenome (maiusculas) e nome do(s) autor(es) do trabalho, separados por ponto-e-virgula (ate quatro autores para TCC)
 
-\palavraschave{Processamento de Imagens, Classificação de Objetos, Aprendizagem de Máquina, Rede Neural, Análise de Componentes Principais, Descritores de Fourier } % palavras-chave do trabalho
-\keywords{Image Processing, Object Classification, Machine Learning, Neural Network, Principal Components Analysis, Fourier Descriptors} % palavras-chave do trabalho em ingles
+\palavraschave{Processamento de Imagens, Classificação de Objetos, Reconhecimento de Padrões, Aprendizagem de Máquina, Rede Neural, Análise de Componentes Principais, Descritores de Fourier } % palavras-chave do trabalho
+\keywords{Image Processing, Object Classification, Pattern Recognition, Machine Learning, Neural Network, Principal Components Analysis, Fourier Descriptors} % palavras-chave do trabalho em ingles
 
 \comentario{\UTFPRdocumentodata\ apresentado ao \UTFPRdepartamentodata\ como requisito parcial para obten\c{c}\~ao do grau de \UTFPRtitulacaodata\ no \UTFPRprogramadata\ da \ABNTinstituicaodata.}
 
