--- a/reflatex.bib
+++ b/reflatex.bib
@@ -102,6 +102,18 @@
   urlaccessdate = {06 de Março de 2012}
 }
 
+@BOOK{GONZALEZ-2006,
+  title = {Digital Image Processing (3rd Edition)},
+  publisher = {Prentice-Hall, Inc.},
+  year = {2006},
+  author = {Gonzalez, Rafael C. and Woods, Richard E.},
+  address = {Upper Saddle River, NJ, USA},
+  __markedentry = {[telmo:]},
+  isbn = {013168728X},
+  owner = {telmo},
+  timestamp = {2013.11.15}
+}
+
 @MISC{FUZZYLOGICTUTORIAL,
   author = {Kaehler},
   title = {Fuzzy Logic Tutorial},
@@ -175,7 +187,6 @@
   volume = {27},
   pages = {949 - 962},
   number = {5},
-  __markedentry = {[telmo:]},
   doi = {http://dx.doi.org/10.1016/j.rcim.2011.03.007},
   issn = {0736-5845},
   keywords = {Automatic \{PCB\} inspection},
@@ -223,6 +234,25 @@
   title = {74LS244 Octal buffer,line driver; 3-state},
   url = {http://www.learn-c.com/74ls244.pdf},
   urlaccessdate = {26 de Fevereiro de 2012}
+}
+
+@INPROCEEDINGS{BACKGROUND-SUBTRACTION,
+  author = {Piccardi, M.},
+  title = {Background subtraction techniques: a review},
+  booktitle = {Systems, Man and Cybernetics, 2004 IEEE International Conference
+	on},
+  year = {2004},
+  volume = {4},
+  pages = {3099-3104 vol.4},
+  __markedentry = {[telmo:6]},
+  doi = {10.1109/ICSMC.2004.1400815},
+  issn = {1062-922X},
+  keywords = {feature extraction;image motion analysis;object detection;background
+	density estimation;background subtraction technique;object detection;spatial
+	correlation;static cameras;Australia;Cameras;Computer vision;Filters;Geometry;Information
+	technology;Layout;Object detection;Subtraction techniques;Videos},
+  owner = {telmo},
+  timestamp = {2013.11.15}
 }
 
 @MISC{LM317,
@@ -305,7 +335,6 @@
   volume = {22},
   pages = {919-932},
   number = {6},
-  __markedentry = {[telmo:6]},
   doi = {10.1007/s10845-009-0367-6},
   issn = {0956-5515},
   keywords = {Machine vision; Solder joints; Component extraction},
