--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -2,29 +2,85 @@
 
 Este capítulo apresenta a fundamentação teórica, que consiste no estudo das técnicas e algoritmos utilizados. O capitulo divide-se em três seções. A seção \ref{sec:segmentacao} apresenta técnicas de subtração de fundo, limiarização, filtros morfológicos, esqueletonização e análise de componentes principais. A seção \ref{sec:descricao}  por sua vez apresenta propriedades de regiões em imagens e descritores de \emph{fourier}. Finalmente a seção \ref{sec:classificacao} apresenta uma visão geral de redes neurais e métodos de treinamento.
 
+
 \section{Segmentação} \label{sec:segmentacao}
+
 
 \subsection{Subtração de fundo} \label{sub:fundteor_sub_fundo}
 
 Técnicas de subtração de fundo são amplamente empregadas para a detecção de movimento em sequencias de imagens de vídeo. A detecção do movimento se dá pela subtração da imagem de referencia chamada "fundo", ou em inglês \emph{background image}, da imagem a ser segmentada. A imagem de fundo não deve possuir objetos em movimento e deve estar sempre atualizada com relação à variações de iluminação \cite{BACKGROUND-SUBTRACTION}.
 
-O método mais simples de subtração de fundo consiste em subtrair a imagem de fundo da imagem a ser segmentada e em seguida aplicar  um limiar no resultado. Pode-se resumir esse método na equação \ref{eq:background-subtraction}. Onde, $D(t+1)$ é a imagem segmentada, $V(x,y,t+1)$ é a imagem de entrada, $V(x,y,t)$ é a imagem de referencia, ou fundo e $Th$ é um limiar, que pode ser escolhido conforme os métodos apresentados na seção \ref{sub:fundteor_limiarizacao}.
+O método mais simples de subtração de fundo consiste em subtrair a imagem de fundo da imagem a ser segmentada e em seguida aplicar  um limiar no resultado. Pode-se resumir esse método na equação \ref{eq:fundteor_background_sub}. Onde, $D(t+1)$ é a imagem segmentada, $V(x,y,t+1)$ é a imagem de entrada, $V(x,y,t)$ é a imagem de referencia, ou fundo e $Th$ é um limiar, que pode ser escolhido conforme os métodos apresentados na seção \ref{sub:fundteor_limiarizacao}.
 
 \begin{equation}
 D(t+1) = \left |V(x,y,t+1)-V(x,y,t)  \right |> Th
-\label{eq:background-subtraction}
+\label{eq:fundteor_background_sub}
 \end{equation}
 
 Existem outros métodos mais complexos, como \emph{Running Gaussian average}, \emph{Temporal median filter}, entre outros, que geram melhores resultados com fundos que não são completamente estáticos \cite{BACKGROUND-SUBTRACTION}, porém não são de interesse para este projeto.
 
+
 \subsection{Limiarização} \label{sub:fundteor_limiarizacao}
 
-Pela simplicidade na implementação e pela baixa complexidade computacional os algoritmos de limiarização são amplamente utilizados na segmentação de imagens. Os métodos de limiarização consistem na partição da imagem baseado na intensidade dos pixeis. Caso a partição seja feita com base em um único limiar de intensidade a limiarização se diz global. Caso a partição seja feita levando em conta os valores de intensidade dos pixeis em uma região de vizinhança de um certo pixel, então o método é chamado de limiarização local \cite{GONZALEZ-2006}. A seguir descreve-se dois métodos para obtenção do limiar para limiarização global.
+Pela simplicidade na implementação e pela baixa complexidade computacional os algoritmos de limiarização são amplamente utilizados na segmentação de imagens. Os métodos de limiarização consistem na partição da imagem baseado na intensidade dos pixeis. Caso a partição seja feita com base em um único limiar de intensidade a limiarização se diz global. Caso a partição seja feita levando em conta os valores de intensidade dos pixeis em uma região de vizinhança de um certo pixel, então o método é chamado de limiarização local \cite{GONZALEZ-2006}. A equação \ref{eq:fundteor_thresholding} descreve esse processo, $g(x,y)$ é a imagem limiarizada, $f(x,y)$ é a imagem de entrada e $T$ é um limiar, que pode variar para diferentes valores de $x$ e $y$ caso a limiarização seja local.
 
-\subsubsection{Limiarização global}
-% basic global thresholding
+\begin{equation}
+g(x,y) =\left\{\begin{matrix}
+1\;\;\;\; if \; f(x,y) > T\\ 
+0\;\;\;\; if \; f(x,y) \leq T
+\end{matrix}\right.
+\label{eq:fundteor_thresholding}
+\end{equation}
+
+Na figura \ref{fig:fundteor_fig_limiarizacao} mostra-se duas imagens e seus respectivos histogramas. A figura \ref{fig:fundteor_hist_sem_ruido} mostra o histograma para uma imagem sem ruído e a figura \ref{fig:fundteor_hist_com_ruido} mostra o histograma para uma imagem com ruido gaussiano. Como pode-se ver na figura \ref{fig:fundteor_hist_sem_ruido} a escolha de um valor para limiar $T$ é uma tarefa fácil, porém para a imagem da figura \ref{fig:fundteor_hist_com_ruido} a escolha do limiar $T$ não é mais trivial. A seguir descreve-se um métodos para obtenção de limiar para limiarização global que pode ser aplicado nos dois casos vistos. 
+
+\begin{figure}[H]
+        \centering
+	\begin{subfigure}[b]{0.3\textwidth}
+                \includegraphics[width=\textwidth]{./figs/thresholding_sem_ruido.png}
+                \caption{Imagem sem ruido}
+                \label{fig:fundteor_sem_ruido}
+		\fonte{\cite{IMAGEM-ARRANHA}}
+        \end{subfigure}
+       ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.3\textwidth}
+                \includegraphics[width=\textwidth]{./figs/thresholding_ruido.png}
+                \caption{Imagem com ruido}
+                \label{fig:fundteor_com_ruido}
+		\fonte{Autoria própria}
+        \end{subfigure}
+        %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+        %(or a blank line to force the subfigure onto a new line)
+        
+	\begin{subfigure}[b]{0.3\textwidth}
+                \includegraphics[width=\textwidth]{./figs/thresholding_histograma_sem_ruido.png}
+                \caption{Histograma da imagem sem ruido}
+                \label{fig:fundteor_hist_sem_ruido}
+		\fonte{Autoria própria}
+        \end{subfigure}
+       ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.3\textwidth}
+                \includegraphics[width=\textwidth]{./figs/thresholding_histograma_ruido.png}
+                \caption{Histograma da imagem com ruido}
+                \label{fig:fundteor_hist_com_ruido}
+		\fonte{Autoria própria}
+        \end{subfigure}
+        %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+        %(or a blank line to force the subfigure onto a new line)
+
+        \caption{Imagens com e sem ruído e seus respectivos histogramas}
+	\label{fig:fundteor_fig_limiarizacao}
+\end{figure}
+
+%\subsubsection{Limiarização global}
+	% basic global thresholding
 \subsubsection{Limiarização global ótima}
-% metodo de otsu
+	% metodo de otsu
+
+
+
 
 
 
@@ -66,6 +122,14 @@ Pela simplicidade na implementação e pela baixa complexidade computacional os al
 %---------- Estado inicial do Projeto ----------
 \section{Estado Inicial do Projeto} \label{sec:estpro}
 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./figs/diagsis.png}
+	\caption[Diagrama do projeto de oficina 3]{Diagrama do projeto de oficina 3.}
+	\fonte{\cite{BELLATOR}}
+	\label{fig:diagsis}
+\end{figure}
 
 \subsection{Visão Geral}
 \label{sec:visgeral}
