--- a/monografia.tex
+++ b/monografia.tex
@@ -9,10 +9,13 @@
 \usepackage{amsmath,amsfonts,amssymb}				% pacote matematico
 \usepackage{float}
 \usepackage{graphicx}								% pacote grafico
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{pgf}									% Pacote grafico
 \usepackage{tikz}									% Pacote para desenhar figuras
 \usepackage{times}									% fonte times
 \usepackage{verbatim}								% multi-line comment
+
 \usetikzlibrary{arrows, backgrounds, fit, petri}	% Modulos tikz
 \usetikzlibrary{positioning, shapes}				% Modulos tikz
 
