--- a/reflatex.bib
+++ b/reflatex.bib
@@ -307,12 +307,13 @@
   urlaccessdate = {25 de fevereiro de 2012}
 }
 
-@MISC{FUZZYLOGIC,
+@MISC{IMAGEM-ARRANHA,
   author = {WIKIPEDIA},
-  title = {Fuzzy Logic},
-  year = {2011},
-  timestamp = {2011.07.29},
-  url = {http://en.wikipedia.org/wiki/Fuzzy\_logic},
+  title = {Balanced histogram thresholding},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.16},
+  url = {http://en.wikipedia.org/wiki/Balanced\_histogram\_thresholding},
   urlaccessdate = {29 de julho de 2011}
 }
 
