--- a/reflatex.bib
+++ b/reflatex.bib
@@ -203,6 +203,16 @@
   year = {2010}
 }
 
+@MISC{MATHWORKS-HELP,
+  author = {MathWorks},
+  title = {Image Enhancement and Analysis},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.16},
+  url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
+  urlaccessdate = {06 de Março de 2012}
+}
+
 @OTHER{FCMENDONCA,
   author = {MENDONÇA, M.},
   school = {Universidade Tecnológica Federal do Paraná},
