--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -146,54 +146,54 @@ Para o estudo das operações morfológicas de abertura e fechamento precisa-se pri
 \begin{itemize}
 \item Podemos representar imagens binárias como sendo um conjunto de pixeis no espaço $Z^2$, onde cada pixel é representado por uma tupla $(x,y)$ e $x$ e $y$ são as coordenadas do pixel.
 \item A translação de um conjunto $B$ para um ponto $z = (z_{1},z_{2})$, denotado por $(B)_z$ é o conjunto de pontos em $B$ com as respectivas coordenas $(x,y)$ tendo sido substituídas pela coordenadas $(x+z_{1}, y+z_{2})$.
-\item Elemento estrutural é uma mascara de pixeis que é utilizada para fazer operações sobre uma imagem. Cada elemento estrutural possui um pixel de origem. A figura \ref{fig:fundteor_elementos_estruturais} mostra exemplos de elementos estruturais e suas respectivas origens.
+\item Elemento estruturante é um conjunto de pixeis que é utilizado para fazer operações sobre uma imagem. Cada elemento estruturante possui um pixel de origem. A figura \ref{fig:fundteor_elementos_estruturantes} mostra exemplos de elementos estruturantes e suas respectivas origens.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{./figs/elementos_estruturais.png}
-	\caption{Exemplos de elementos estruturais.}
+	\includegraphics[width=0.8\textwidth]{./figs/elementos_estruturantes.png}
+	\caption{Exemplos de elementos estruturantes.}
 	\fonte{Autoria própria}
-	\label{fig:fundteor_elementos_estruturais}
+	\label{fig:fundteor_elementos_estruturantes}
 \end{figure}
 
-\item O elemento estrutural pode ser utilizado para fazer operações sobre uma imagem binária. Considere por exemplo a operação no conjunto $A$, feita pelo elemento estrutural $B$ (figuras \ref{fig:fundteor_elementos_estruturais_ex_A} e \ref{fig:fundteor_elementos_estruturais_ex_B}): Crie um novo conjunto $C$ sobrepondo $B$ em $A$ da maneira que a origem de $B$ passe  por todos os pixeis de $A$. Em cada ponto que a origem de $B$ passou verifique se $B$ está completamente contido em $A$. Se estiver marque o ponto no conjunto $C$. A figura \ref{fig:fundteor_elementos_estruturais_ex_C} mostra o resultado da operação, ou seja, o conjunto $C$.
+\item O elemento estruturante pode ser utilizado para fazer operações sobre uma imagem binária. Considere por exemplo a operação no conjunto $A$, feita pelo elemento estruturante $B$ (figuras \ref{fig:fundteor_elementos_estruturantes_ex_A} e \ref{fig:fundteor_elementos_estruturantes_ex_B}): Cria-se um novo conjunto $C$ sobrepondo $B$ em $A$ da maneira que a origem de $B$ passe por todos os pixeis de $A$. Em cada ponto que a origem de $B$ passa verifica-se se $B$ está completamente contido em $A$. Se estiver marca-se esse ponto no conjunto $C$. A figura \ref{fig:fundteor_elementos_estruturantes_ex_C} mostra o resultado da operação, ou seja, o conjunto $C$.
 
 \begin{figure}[H]
         \centering
 	\begin{subfigure}[b]{0.4\textwidth}
-                \includegraphics[width=\textwidth]{./figs/elementos_estruturais_A.png}
+                \includegraphics[width=\textwidth]{./figs/elementos_estruturantes_A.png}
                 \caption{Imagem binária $A$}
-                \label{fig:fundteor_elementos_estruturais_ex_A}
+                \label{fig:fundteor_elementos_estruturantes_ex_A}
         \end{subfigure}
        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.4\textwidth}
-                \includegraphics[width=\textwidth]{./figs/elementos_estruturais_B.png}
-                \caption{Elemento estrutural $B$}
-                \label{fig:fundteor_elementos_estruturais_ex_B}
+                \includegraphics[width=\textwidth]{./figs/elementos_estruturantes_B.png}
+                \caption{Elemento estruturante $B$}
+                \label{fig:fundteor_elementos_estruturantes_ex_B}
         \end{subfigure}
         %add desired spacing between images, e. g. ~, \quad, \qquad etc.
         %(or a blank line to force the subfigure onto a new line)
         
 	\begin{subfigure}[b]{0.4\textwidth}
-                \includegraphics[width=\textwidth]{./figs/elementos_estruturais_C.png}
+                \includegraphics[width=\textwidth]{./figs/elementos_estruturantes_C.png}
                 \caption{$C$, resultado da operação de $B$ em $A$}
-                \label{fig:fundteor_elementos_estruturais_ex_C}
+                \label{fig:fundteor_elementos_estruturantes_ex_C}
         \end{subfigure}
 
-        \caption{Imagem binária, elemento estrutural e operação de $B$ em $A$}
+        \caption{Imagem binária, elemento estruturante e operação de $B$ em $A$}
 	\fonte{Autoria própria}
-	\label{fig:elementos_estruturais_ex}
+	\label{fig:elementos_estruturantes_ex}
 \end{figure}
 
 \end{itemize}
 
-A seguir apresenta-se as operações de erosão e de dilatação, que são necessárias para as operações de abertura e fechamento que são apresentadas na sequencia.
+A seguir apresentam-se as operações de erosão e de dilatação, que são necessárias para as operações de abertura e fechamento que são apresentadas na sequencia.
 
 
 \subsubsection{Erosão}
 
-Sendo $A$ e $B$ conjuntos no espaço $Z^2$, a erosão do conjunto $A$ pelo elemento estrutural $B$, denotada por $A \ominus B$, é definida na equação \ref{eq:fundteor_erosao} \cite{GONZALEZ-2006}.
+Sendo $A$ e $B$ conjuntos no espaço $Z^2$, a erosão do conjunto $A$ pelo elemento estruturante $B$, denotada por $A \ominus B$, é definida na equação \ref{eq:fundteor_erosao} \cite{GONZALEZ-2006}.
 
 \begin{equation}
 A \ominus B = \left \{ z \mid (B)_z \subseteq A) \right \}
@@ -201,7 +201,7 @@ A \ominus B = \left \{ z \mid (B)_z \subseteq A) \right \}
 \end{equation}
 
 Ou seja, a erosão de $A$ por $B$ é o conjunto de todos os pontos $z$ tal que $B$, transladado por $z$, está contido em $A$.
-Pode-se ver melhor esse processo na figura \ref{fig:fundteor_erosao_A_B}, onde o conjunto A é erodido pelo elemento estrutural B formando o conjunto $A \ominus B$.
+Pode-se ver melhor esse processo na figura \ref{fig:fundteor_erosao_A_B}, onde o conjunto A é erodido pelo elemento estruturante B formando o conjunto $A \ominus B$.
 
 \begin{figure}[H]
 	\centering
@@ -213,7 +213,26 @@ Pode-se ver melhor esse processo na figura \ref{fig:fundteor_erosao_A_B}, onde o
  
 
 \subsubsection{Dilatação}
-%dilatacao
+
+Sendo $A$ e $B$ conjuntos no espaço $Z^2$, a dilatação do conjunto $A$ pelo elemento estruturante $B$, denotada por $A \oplus  B$, é definida na equação \ref{eq:fundteor_dilatacao} \cite{GONZALEZ-2006}.
+
+\begin{equation}
+A \oplus B = \left \{ z\mid \left [(\hat{B})_{z} \cap A  \right ] \subseteq A \right \}
+\label{eq:fundteor_dilatacao}
+\end{equation}
+
+Onde $\hat{B}$ é o conjunto $B$ espelhado. Quando o elemento estruturante é simétrico então $\hat{B}=B$. 
+
+A equação \ref{eq:fundteor_dilatacao} diz que a dilatação do conjunto $A$ pelo elemento estruturante $B$ é o conjunto de todos os pontos $z$ tal que se $\hat{B}$ e $A$ se sobrepõem em pelo menos um ponto, então $z$ faz parte de $A \oplus B$. Pode-se ver melhor esse processo na figura \ref{fig:fundteor_dilatacao_A_B}, onde o conjunto $A$ é dilatado pelo elemento estruturante $B$ formando o conjunto $A \oplus B$.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./figs/dilatacao_A_B.png}
+	\caption{Exemplo de dilatação do conjunto A por B.}
+	\fonte{\cite{GONZALEZ-2006}}
+	\label{fig:fundteor_dilatacao_A_B}
+\end{figure}
+
 
 \subsubsection{Abertura}
 %abertura
